# TheCube

./: README.md
TheCube/: .clang-format  CMakeLists.txt  CMakeSettings.json  README.md
TheCube/REngine/: CMakeLists.txt  README.md
TheCube/REngine/Libraries/: README.md
TheCube/REngine/Libraries/Base/: CMakeLists.txt
TheCube/REngine/Libraries/Core/: CMakeLists.txt
TheCube/REngine/Libraries/Core/Sources/: Core.cpp  DynamicLibrary.cpp  DynamicLibrary.hpp  DynamicLibrary.inl  implementedBy.cpp  implementedBy.hpp
TheCube/REngine/Libraries/Core/Sources/Macros/: Debug.cpp  Debug.hpp  Utilities.cpp  Utilities.hpp
TheCube/REngine/Libraries/Core/Sources/Platform/: DynamicLibrary_Platform.cpp  DynamicLibrary_Platform.hpp
TheCube/REngine/Libraries/Core/Sources/Platform/Windows/: DynamicLibrary_Windows.cpp  DynamicLibrary_Windows.hpp  ObjectHandle.cpp  ObjectHandle.hpp  ObjectHandle.inl
TheCube/REngine/Libraries/Core/Sources/System/: Enums.cpp  Enums.hpp
TheCube/REngine/Libraries/Core/Sources/Utilities/: String.cpp  String.hpp  String.inl  StringView.cpp  StringView.hpp  StringView.inl
TheCube/REngine/Libraries/Core/Tests/: CMakeLists.txt
TheCube/REngine/Libraries/Core/Tests/Platform/Windows/ObjectHandle/: CMakeLists.txt
TheCube/REngine/Libraries/Core/Tests/Platform/Windows/ObjectHandle/Sources/: ObjectHandleTest.cpp
TheCube/REngine/Libraries/Core/Tests/String/: CMakeLists.txt
TheCube/REngine/Libraries/Core/Tests/String/Sources/: StringTest.cpp
TheCube/REngine/Libraries/Core/Tests/StringView/: CMakeLists.txt
TheCube/REngine/Libraries/Core/Tests/StringView/Sources/: StringViewTest.cpp
TheCube/REngine/Libraries/Core/cmake/: Core_SourceFiles.cmake
TheCube/REngine/Libraries/GfxRenderers/: CMakeLists.txt
TheCube/REngine/Libraries/GfxRenderers/Common/: IGfxRenderer.hpp
TheCube/REngine/Libraries/GfxRenderers/GfxRenderer_Base/: CMakeLists.txt
TheCube/REngine/Libraries/GfxRenderers/GfxRenderer_Base/Sources/: IGfxRenderer.cpp
TheCube/REngine/Libraries/GfxRenderers/GfxRenderer_Base/cmake/: GfxRenderer_Base_SourceFiles.cmake
TheCube/REngine/Libraries/GfxRenderers/GfxRenderer_D3D12/: CMakeLists.txt
TheCube/REngine/Libraries/GfxRenderers/GfxRenderer_D3D12/Sources/: GfxRenderer.cpp  GfxRenderer.hpp
TheCube/REngine/Libraries/GfxRenderers/GfxRenderer_D3D12/cmake/: GfxRenderer_SourceFiles.cmake
TheCube/REngine/Libraries/GfxRenderers/GfxRenderer_OpenGL/: CMakeLists.txt
TheCube/REngine/Libraries/GfxRenderers/GfxRenderer_OpenGL/Sources/: GfxRenderer.cpp  GfxRenderer.hpp
TheCube/REngine/Libraries/GfxRenderers/GfxRenderer_OpenGL/cmake/: GfxRenderer_SourceFiles.cmake
TheCube/REngine/Libraries/GfxRenderers/GfxRenderer_Vulkan/: CMakeLists.txt
TheCube/REngine/Libraries/GfxRenderers/GfxRenderer_Vulkan/Sources/: GfxRenderer.cpp
TheCube/REngine/Libraries/GfxRenderers/GfxRenderer_Vulkan/cmake/: GfxRenderer_SourceFiles.cmake
TheCube/REngine/Libraries/Logger/: CMakeLists.txt  README.md
TheCube/REngine/Libraries/Logger/Sources/: Logger.cpp  Logger.hpp  Logger.inl  Policy.cpp  Policy.hpp  Utilities.cpp  Utilities.hpp
TheCube/REngine/Libraries/Logger/Sources/Macros/: UtilityMacros.cpp
TheCube/REngine/Libraries/Logger/Sources/Utilities/: implementedBy.cpp  implementedBy.hpp
TheCube/REngine/Libraries/Logger/cmake/: Logger_SourceFiles.cmake
TheCube/REngine/Libraries/Logger/include/: Logger
TheCube/REngine/Libraries/Math/: CMakeLists.txt
TheCube/REngine/Libraries/Math/Common/: Matrix.hpp  Vector.hpp
TheCube/REngine/Libraries/Math/Math_AVX/: CMakeLists.txt
TheCube/REngine/Libraries/Math/Math_AVX/Sources/: Matrix.cpp  Vector.cpp
TheCube/REngine/Libraries/Math/Math_AVX/cmake/: Math_AVX_SourceFiles.cmake
TheCube/REngine/Libraries/Math/Math_Base/: CMakeLists.txt
TheCube/REngine/Libraries/Math/Math_Base/Sources/: Complex.cpp  Complex.hpp
TheCube/REngine/Libraries/Math/Math_Base/cmake/: Math_Base_SourceFiles.cmake
TheCube/REngine/Libraries/Math/Math_SSE/: CMakeLists.txt
TheCube/REngine/Libraries/Math/Math_SSE/Sources/: Matrix.cpp  Vector.cpp
TheCube/REngine/Libraries/Math/Math_SSE/cmake/: Math_SSE_SourceFiles.cmake
TheCube/REngine/Libraries/REngine/: CMakeLists.txt
TheCube/REngine/Libraries/REngine/Sources/: Application.cpp  Application.hpp
TheCube/REngine/Libraries/REngine/Sources/System/: Settings.cpp  Settings.hpp
TheCube/REngine/Libraries/REngine/cmake/: REngine_HeaderFiles.cmake  REngine_SourceFiles.cmake
TheCube/REngine/Tests/: CMakeLists.txt.in
TheCube/REngine/cmake/: REngine.cmake  REngine_AuxiliaryLoggingFunctions.cmake  REngine_BuildEnvironment.cmake  REngine_Functions.cmake  REngine_GoogleTest.cmake
TheCube/REngine/include/REngine/: ReApplication
TheCube/REngine/include/REngine/Core/: ReCore  ReCoreBase  ReDynamicLibrary  RePlatformInternals  ReString  ReStringView
TheCube/REngine/include/REngine/GfxRenderers/: ReIGfxRenderer
TheCube/REngine/include/REngine/Logger/: ReLogger
TheCube/REngine/include/REngine/Math/: ReArithmetics  ReMatrix  ReVector
TheCube/TheCube/: CMakeLists.txt  README.md
TheCube/TheCube/Resources/Windows/: RequireAdministrator.manifest
TheCube/TheCube/Sources/: TheCube.cpp
TheCube/TheCube/cmake/: TheCube_SourceFiles.cmake
