################################################################################
# Project: TheCube
################################################################################

################################################################################
cmake_minimum_required (VERSION 3.9.0 FATAL_ERROR)
################################################################################

################################################################################
# Global properties
################################################################################
# Enable organization of targets into folders for capable CMake generators.
set_property (GLOBAL PROPERTY USE_FOLDERS ON)
################################################################################

################################################################################
# Project options
################################################################################
option (option_Executable_EnableRequireAdministrator 
  "Enable the application to request Administrator priviledges." NO
)
################################################################################

################################################################################
# Project variables
################################################################################
set (ProjectName "TheCube")
set (ProjectVersion "0.1.0.0") # MAJOR.MINOR.PATCH.TWEAK
################################################################################

################################################################################
# Project declaration
################################################################################
project (${ProjectName} VERSION ${ProjectVersion} LANGUAGES C CXX)
################################################################################

################################################################################
# CTest
################################################################################
enable_testing ()
################################################################################

################################################################################
# Subprojects
################################################################################
# The REngine subproject needs to be included first as it contains custom CMake
# modules (functions and macros) that are used by the subsequent subproject.
add_subdirectory (REngine) # Librarary
add_subdirectory (TheCube) # Executable
################################################################################
